[package]
name = "homebridge-rusty-spotify"
version = "0.1.0"
authors = ["anna <anna@scholtzan.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = "^1.0.59"
serde_derive = "^1.0.59"
js-sys = "0.3.35"

[dependencies.web-sys]
version = "0.3"
features = [ "console" ]

[dependencies.wasm-bindgen]
version = "^0.2"
features = ["serde-serialize"]