[package]
name = "homebridge-rusty-spotify"
version = "0.4.5"
authors = ["anna <anna@scholtzan.net>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = "^1.0.59"
serde_derive = "^1.0.59"
serde_json = "1.0"
js-sys = "0.3.35"
base64 = "0.12.0"
futures = "0.3.4"
wasm-bindgen-futures = "0.4.10"

[dependencies.web-sys]
version = "0.3.4"
features = ['console']

[dependencies.wasm-bindgen]
version = "0.2.60"
features = ["serde-serialize"]
